# fan-control

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  tiny.patch
.cargo/: config.toml
avr-specs/: avr-atmega2560.json  avr-attiny85.json
src/: attiny.rs  commons.rs  macros.rs  main.rs  mega2560.rs
