[package]
name = "fan-control-rs"
version = "0.1.0"
authors = ["Maximilian Staab <maximilian.staab@student.kit.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fan-control-rs"
test = false
bench = false

[features]
fan  = []
pump = []
both = ["fan", "pump"]
serial = []
phase_pwm = []
simple_pwm = []

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ufmt = "0.1.0"
fixed = { version = "1.23.1", features = ["num-traits"]}


[target.avr-atmega2560.dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4", features = [
    "arduino-mega2560",
] }
avr-device = { version = "0.5.1", features = ["atmega2560"] }
avr-hal-generic = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4" }
# Only if you need floats and the steinhart-hart calculation for temperature
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }


[target.avr-attiny85.dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4", features = [
    "trinket",
] }
avr-device = { version = "0.5.1", features = ["attiny85"] }
avr-hal-generic = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4" }
fixed = { version = "1.23.1"}


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# Be carefull with `z`, it can lead to a compiler bug in some cases
opt-level = "z"

# Be carefull with `z`, it can lead to a compiler bug in some cases
[profile.release.package."*"]
opt-level = "z"
